# internal/dto/client.go
@@ -4,3 +4,8 @@ type ClientForAuth struct {
 	ClientId    string
 	RedirectURI string
 }
+
+type ClientForToken struct {
+	ClientId     string
+	ClientSecret string
+}
