# internal/transport/http/handler/auth.go
@@ -8,6 +8,7 @@ import (
 	"github.com/alnovi/sso/internal/dto"
 	"github.com/alnovi/sso/internal/exception"
 	"github.com/alnovi/sso/internal/transport/http/request"
+	"github.com/alnovi/sso/internal/transport/http/response"
 	"github.com/alnovi/sso/internal/usecase"
 	"github.com/alnovi/sso/pkg/validator"
 	"github.com/labstack/echo/v4"
@@ -33,6 +34,7 @@ func NewAuthHandler(auth usecase.Auth, client usecase.Client) *AuthHandler {
 // @Success 200 "HTML страница с формой авторизации"
 // @Success 302 "Передача кода по ссылке обратного вызова"
 // @Failure 400 "Ошибка запроса"
+// @Failure 500 "Внутренняя ошибка сервера"
 // @Router      /oauth/signin [get]
 func (h *AuthHandler) AuthForm(c echo.Context) error {
 	var err error
@@ -89,12 +91,13 @@ func (h *AuthHandler) AuthForm(c echo.Context) error {
 // @Param       client_id query string false "ID клиента"
 // @Param       redirect_uri query string false "Ссылка клиента для обратного вызова"
 // @Param       request body request.SignIn true "Данные для авторизации пользователя"
-// @Success 200 "Ссылка обратного вызова с кодом"
+// @Success 200 {object} response.Location "Ссылка обратного вызова с кодом"
 // @Success 302 "Передача кода по ссылке обратного вызова"
-// @Failure 400 "Ошибка запроса"
-// @Failure 401 "Аунтефикация не пройдена"
-// @Failure 403 "Нет доступа к клиенту"
-// @Failure 422 "Ошибка ввода данных"
+// @Failure 400 {object} response.Error "Ошибка запроса"
+// @Failure 401 {object} response.Error "Аунтефикация не пройдена"
+// @Failure 403 {object} response.Error "Нет доступа к клиенту"
+// @Failure 422 {object} response.ErrorValidate "Ошибка ввода данных"
+// @Failure 500 {object} response.Error "Внутренняя ошибка сервера"
 // @Router      /oauth/signin [post]
 func (h *AuthHandler) SignIn(c echo.Context) error {
 	var err error
@@ -155,7 +158,7 @@ func (h *AuthHandler) SignIn(c echo.Context) error {
 	}
 
 	if c.Request().Header.Get("Content-Type") == "application/json" {
-		return c.JSON(http.StatusOK, echo.Map{"location": callback.String()})
+		return c.JSON(http.StatusOK, response.Location{Location: callback.String()})
 	}
 
 	return c.Redirect(http.StatusFound, callback.String())
