# internal/transport/http/response/error.go
@@ -1,0 +1,10 @@
+package response
+
+type Error struct {
+	Message string `json:"message"`
+}
+
+type ErrorValidate struct {
+	Message  string            `json:"message"`
+	Validate map[string]string `json:"validate"`
+}
