# internal/transport/http/response/location.go
@@ -1,0 +1,5 @@
+package response
+
+type Location struct {
+	Location string `json:"location"`
+}
